remove iOS5 flicker fix

--- a/less/app.less
+++ b/less/app.less
@@ -179,9 +179,9 @@ a:active {
 
 }
 
-.visible + .visible .back img {
-	-webkit-transition: none; // nasty flicker fix
-}
+// .visible + .visible .back img {
+// 	-webkit-transition: none; // nasty flicker fix for iOS 5
+// }
 
 // @-webkit-keyframes debug {
 // 	0% {
